--- a/HCI_Vista_Low/res/layout/activity_main.xml
+++ b/HCI_Vista_Low/res/layout/activity_main.xml
@@ -36,12 +36,31 @@
         android:textStyle="bold" />
 
     <ImageButton
-        android:id="@+id/myButton1"
+        android:id="@+id/searchBtn"
         android:layout_width="80dip"
         android:layout_height="80dip"
         android:layout_alignTop="@+id/takePicture"
         android:background="@drawable/button_shape"
         android:src="@drawable/search"
         android:visibility="visible" />
+
+    <EditText
+        android:id="@+id/pic_url"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/takePicture"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="84dp"
+        android:ems="10" />
+
+    <TextView
+        android:id="@+id/url_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/pic_url"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="19dp"
+        android:text="@string/url_hint"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
