--- a/HCI_Vista_Low/res/layout/activity_display_results.xml
+++ b/HCI_Vista_Low/res/layout/activity_display_results.xml
@@ -1,21 +1,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res/com.example.hci_vista_low"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".DisplayResults" >
-
+    
     <ImageView
         android:id="@+id/result_pic"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-     />
+        android:layout_alignParentTop="true" />
 
+	<com.example.hci_vista_low.SingleTouchEventView
+	    android:id = "@+id/single_touch"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" 
+	    android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+	    android:adjustViewBounds="true"
+	    >
+	</com.example.hci_vista_low.SingleTouchEventView>
+	<ProgressBar
+	     android:id="@+id/item_dec_progress"
+	     android:layout_width="wrap_content"
+	     android:layout_height="wrap_content"
+	     android:layout_centerHorizontal="true"
+	     android:layout_centerVertical="true"
+	     android:visibility="invisible" 
+	     android:layout_weight="2" >
+	 
+	 </ProgressBar>
 </RelativeLayout>
