--- a/HCI_Vista_Low/res/menu/display_results.xml
+++ b/HCI_Vista_Low/res/menu/display_results.xml
@@ -1,9 +1,14 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android" 
+    xmlns:hci_vista = "http://schemas.android.com/apk/res-auto"
+    >
+    
+    <item android:id="@+id/action_search"
+          android:icon="@drawable/ic_action_search"
+          android:showAsAction="ifRoom"
+          android:title="@string/action_search"/>
+    <item android:id="@+id/action_compose"
+          android:icon="@drawable/ic_launcher_voice"
+          android:title="@string/action_speech" 
+          android:showAsAction= "ifRoom"/>
 
 </menu>
