--- a/HCI_Vista_Low/res/values/attrs.xml
+++ b/HCI_Vista_Low/res/values/attrs.xml
@@ -10,5 +10,7 @@
         <attr name="buttonBarStyle" format="reference" />
         <attr name="buttonBarButtonStyle" format="reference" />
     </declare-styleable>
-
+	<declare-styleable name="CustomerTouchView">
+	    
+	</declare-styleable>
 </resources>
