--- a/HCI_Vista_Low/res/layout/activity_display_results.xml
+++ b/HCI_Vista_Low/res/layout/activity_display_results.xml
@@ -8,11 +8,13 @@
     <ImageView
         android:id="@+id/result_pic"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true" 
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="false"/>
 
 	<com.example.hci_vista_low.SingleTouchEventView
 	    android:id = "@+id/single_touch"
@@ -22,7 +24,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-	    android:adjustViewBounds="true"
+	    android:adjustViewBounds="false"
 	    >
 	</com.example.hci_vista_low.SingleTouchEventView>
 	
