--- a/HCI_Vista_Low/res/layout/activity_display_results.xml
+++ b/HCI_Vista_Low/res/layout/activity_display_results.xml
@@ -18,13 +18,14 @@
 
 	<com.example.hci_vista_low.SingleTouchEventView
 	    android:id = "@+id/single_touch"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" 
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content" 
 	    android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
 	    android:adjustViewBounds="false"
+	    scaleType="centerCrop"
 	    >
 	</com.example.hci_vista_low.SingleTouchEventView>
 	
@@ -36,7 +37,6 @@
 	     android:layout_centerVertical="true"
 	     android:visibility="invisible" 
 	     android:layout_weight="2" >
-	 
 	 </ProgressBar>
 	 <LinearLayout
 		android:id="@+id/bottomBar"
@@ -57,7 +57,7 @@
 	     android:layout_height="wrap_content"
 	     android:layout_weight=".50"
 	     android:text="@string/cancel_btn" />
-</LinearLayout>
+	</LinearLayout>
 
 	 <TextView
 	     android:id="@+id/json_result"
