--- a/HCI_Vista_Low/res/layout/activity_main.xml
+++ b/HCI_Vista_Low/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
         android:visibility="invisible" />
 -->
 
-
     <Button
         android:id="@+id/takePicture"
         android:layout_width="80dip"
@@ -24,26 +23,6 @@
         android:textColor="#FFFF00"
         android:textSize="50sp"
         android:textStyle="bold" />
-    
-
-    <EditText
-        android:id="@+id/pic_url"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/takePicture"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="84dp"
-        android:ems="10" />
-
-    <TextView
-        android:id="@+id/url_hint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/pic_url"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="19dp"
-        android:text="@string/url_hint"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ImageButton
         android:id="@+id/browse_gallery"
@@ -66,5 +45,35 @@
         android:background="@drawable/button_shape"
         android:src="@drawable/search"
         android:visibility="visible" />
+
+    <EditText
+        android:id="@+id/pic_url"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/takePicture"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="56dp"
+        android:ems="10" >
+
+        <requestFocus />
+    </EditText>
+
+    <ImageView
+        android:id="@+id/vistalogo"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/vista_large"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/url_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/pic_url"
+        android:layout_alignParentLeft="true"
+        android:text="@string/url_hint"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
